Google Maps - fixed google maps rendering error. Google maps doesn't like vertical-align top applied to its imgs

--- a/infobox.css
+++ b/infobox.css
@@ -1,7 +1,7 @@
 * {
 	box-sizing: border-box;
 }
-img {
+.content img {
 	max-width: 100%;
 	vertical-align: top;
 }
